--- a/packages/components/Flatlist/components/decorator.html
+++ b/packages/components/Flatlist/components/decorator.html
@@ -11,6 +11,13 @@
 {/if}
 
 <script>
+  /**
+   * Decorator.html
+   * @param position {prop}
+   * @param value {prop} text for decorator
+   * @param style {prop} CSS(JS Syntax) from decorator object
+   * @desc template for Decorator component
+   * */
   import { getStyles } from '../helpers.js';
 
   export default {
