--- a/packages/components/Flatlist/components/fixture.html
+++ b/packages/components/Flatlist/components/fixture.html
@@ -18,6 +18,10 @@
 {/if}
 
 <script>
+  /**
+   * Fixture.html
+   * @desc code block for Fixture component
+   * */
   import {
     shouldReturnComponent,
     getStyles,
