--- a/packages/components/Flatlist/DefaultRow.html
+++ b/packages/components/Flatlist/DefaultRow.html
@@ -110,6 +110,11 @@
 </div>
 
 <script>
+  /**
+   * DefaultRow.html
+   *
+   * @desc template default for the rows from Flatlist
+   * */
   import { getStyles, getAlignClass, shouldReturnComponent } from './helpers.js';
   import isObject from './utils/isObject.js';
 
