--- a/packages/components/Flatlist/components/decorator.html
+++ b/packages/components/Flatlist/components/decorator.html
@@ -13,10 +13,12 @@
 <script>
   /**
    * Decorator.html
-   * @param position {prop}
-   * @param value {prop} text for decorator
-   * @param style {prop} CSS(JS Syntax) from decorator object
-   * @desc template for Decorator component
+   *
+   * @param {prop} position position of item on menu
+   * @param {prop} value text for decorator
+   * @param {prop} style CSS(JS Syntax) from decorator object
+   *
+   * @description template for Decorator component
    * */
   import { getStyles } from '../helpers.js';
 
