--- a/packages/components/Flatlist/components/parent.html
+++ b/packages/components/Flatlist/components/parent.html
@@ -18,7 +18,7 @@
 <script>
   /**
    * Parent.html
-   * @desc abstraction of svelte:component to use native events from Svelte
+   * @description abstraction of svelte:component to use native events from Svelte
    *
    * */
   export default {
@@ -31,10 +31,10 @@
     },
     computed: {
       /**
-       * @param key {number}
-       * @param data {obj}
+       * @param {number} key
+       * @param {object} data
        *
-       * @desc Handles shortcut
+       * @description Handles shortcut
        * */
        _shortcut({ key, data = {}}) {
         if(data.shortcut) return data.shortcut;
@@ -44,20 +44,20 @@
         return key + 1;
       },
       /**
-       * @param useAutoShortcuts {prop}
-       * @param hasFirstFocusable {prop}
+       * @param {boolean} useAutoShortcuts
+       * @param {boolean} hasFirstFocusable
        *
-       * @desc Check if use AUTO Shortcut
+       * @description Check if use AUTO Shortcut
        * */
       _shouldUseAutoShortcuts({ useAutoShortcuts, hasFirstFocusable }) {
         return useAutoShortcuts && !hasFirstFocusable;
       },
       /**
-       * @param _shouldUseAutoShortcuts {computed}
-       * @params _shortcut {computed}
-       * @param data {obj}
+       * @param {boolean} _shouldUseAutoShortcuts
+       * @param {number} _shortcut
+       * @param {object} data
        *
-       * @desc Handle shortcut (if auto or not)
+       * @description Handle shortcut (if auto or not)
        * */
       _shortcutComputed({ _shouldUseAutoShortcuts, _shortcut, data = {}}) {
 
@@ -66,18 +66,20 @@
         return _shouldUseAutoShortcuts ? _shortcut : dataShortcut;
       },
       /**
-       * @param position {number}
-       * @param hasFirstFocusable {prop}
-       * @param _shortcutComputed {computed}
-       * @desc Handle element index
+       * @param {number} position
+       * @param {boolean} hasFirstFocusable
+       * @param {number} _shortcutComputed
+       *
+       * @description Handle element index
        * */
       _tabPosition({ position, hasFirstFocusable, _shortcutComputed}) {
         if(!hasFirstFocusable) return _shortcutComputed;
         return position + (hasFirstFocusable ? 0 : 1);
       },
       /**
-       * @param decorator {prop}
-       * @desc Receives decorator block on parent
+       * @param {object} decorator
+       *
+       * @description Receives decorator block on parent
        * */
        _decorator({ decorator }) {
         if(!decorator) return {};
