--- a/packages/components/Flatlist/components/decorator.html
+++ b/packages/components/Flatlist/components/decorator.html
@@ -14,9 +14,9 @@
   /**
    * Decorator.html
    *
-   * @param {prop} position - position of item on menu
-   * @param {prop} value - text for decorator
-   * @param {prop} style - CSS(JS Syntax) from decorator object
+   * @param {number} position - position of item on menu
+   * @param {string} value - text for decorator
+   * @param {object} style - CSS(JS Syntax) from decorator object
    *
    * @description template for Decorator component
    * */
