feat: add q60 and d230 models to simulation

--- a/packages/pos/simulator/view/pos/Card.html
+++ b/packages/pos/simulator/view/pos/Card.html
@@ -176,6 +176,16 @@
       left: 35px;
     }
 
+    &.D230 {
+      top: 640px;
+      left: 55px;
+    }
+
+    &.Q60 {
+      top: 760px;
+      left: 80px;
+    }
+
     &:not(:hover):not(.is-inserted) {
       filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
     }
