--- a/packages/pos/simulator/view/pos/POS.html
+++ b/packages/pos/simulator/view/pos/POS.html
@@ -79,6 +79,20 @@
       background-image: url(./assets/D199.png);
     }
 
+    .D230,
+    .shadow-D230 {
+      width: 367px;
+      height: 600px;
+      background-image: url(./assets/D230.png);
+    }
+
+    .Q60,
+    .shadow-Q60 {
+      width: 430px;
+      height: 750px;
+      background-image: url(./assets/Q60.png);
+    }
+
     .pos {
       user-select: none;
     }
