--- a/packages/pos/simulator/view/pos/hardware/Keypad/index.html
+++ b/packages/pos/simulator/view/pos/hardware/Keypad/index.html
@@ -12,6 +12,8 @@
   import S920 from './S920.html';
   import D195 from './D195.html';
   import D199 from './D199.html';
+  import D230 from './D230.html';
+  import Q60 from './Q60.html';
 
   export default {
     store: () => store,
@@ -38,6 +40,14 @@
           {
             title: MODELS.D199,
             component: D199,
+          },
+          {
+            title: MODELS.D230,
+            component: D230,
+          },
+          {
+            title: MODELS.Q60,
+            component: Q60,
           },
         ],
       };
