--- a/packages/pos/simulator/view/pos/hardware/Printer.html
+++ b/packages/pos/simulator/view/pos/hardware/Printer.html
@@ -233,4 +233,14 @@
     left: 34px;
     bottom: 595px;
   }
+
+  :global(.D230 .printer) {
+    left: 58px;
+    bottom: 520px;
+  }
+
+  :global(.Q60 .printer) {
+    left: 85px;
+    bottom: 600px;
+  }
 </style>
