--- a/packages/pos/simulator/view/pos/hardware/Screen.html
+++ b/packages/pos/simulator/view/pos/hardware/Screen.html
@@ -138,6 +138,22 @@
       height: 455px;
     }
 
+    :global(.D230 .screen) {
+      top: 155px;
+      left: 42px;
+      border-radius: 2px;
+      width: 274px;
+      height: 205px;
+    }
+
+    :global(.Q60 .screen) {
+      top: 210px;
+      left: 68px;
+      border-radius: 2px;
+      width: 278px;
+      height: 213px;
+    }
+
     .content {
       height: 100%;
       flex: 0 1 auto;
