--- a/packages/pos/simulator/view/pos/panels/Models.html
+++ b/packages/pos/simulator/view/pos/panels/Models.html
@@ -26,6 +26,8 @@
           MODELS.MP35,
           MODELS.D195,
           MODELS.D199,
+          MODELS.D230,
+          MODELS.Q60,
         ],
       };
     },
