feat: 🎸 (simulator) add Q92 POS

--- a/packages/pos/simulator/view/pos/Card.html
+++ b/packages/pos/simulator/view/pos/Card.html
@@ -186,6 +186,11 @@
       left: 80px;
     }
 
+    &.Q92 {
+      top: 853px;
+      left: 87px;
+    }
+
     &:not(:hover):not(.is-inserted) {
       filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
     }
