--- a/packages/pos/simulator/view/pos/hardware/Keypad/index.html
+++ b/packages/pos/simulator/view/pos/hardware/Keypad/index.html
@@ -14,6 +14,7 @@
   import D199 from './D199.html';
   import D230 from './D230.html';
   import Q60 from './Q60.html';
+  import Q92 from './Q92.html';
 
   export default {
     store: () => store,
@@ -24,6 +25,10 @@
           {
             title: MODELS.S920,
             component: S920,
+          },
+          {
+            title: MODELS.Q92,
+            component: Q92,
           },
           {
             title: MODELS.MP35P,
