--- a/packages/pos/simulator/view/pos/hardware/Screen.html
+++ b/packages/pos/simulator/view/pos/hardware/Screen.html
@@ -154,6 +154,15 @@
       height: 213px;
     }
 
+    :global(.Q92 .screen) {
+      top: 162px;
+      left: 64px;
+      border-radius: 0;
+      width: 280px;
+      height: 410px;
+      outline: 1px solid black;
+    }
+
     .content {
       height: 100%;
       flex: 0 1 auto;
