--- a/packages/pos/simulator/view/pos/POS.html
+++ b/packages/pos/simulator/view/pos/POS.html
@@ -51,6 +51,13 @@
       background-image: url(./assets/POS.png);
     }
 
+    .Q92,
+    .shadow-Q92 {
+      width: 430px;
+      height: 840px;
+      background-image: url(./assets/Q92.png);
+    }
+
     .MP35P,
     .shadow-MP35P {
       width: 508px;
