--- a/packages/pos/simulator/view/pos/panels/Http.html
+++ b/packages/pos/simulator/view/pos/panels/Http.html
@@ -44,6 +44,16 @@
       <span>AppKey</span>
       <input type="text" bind:value="appKey"/>
     </li>
+    {#each Object.keys(proxyEnvs) as env}
+      <li class="controller">
+        <span>{env}</span>
+        <Radio
+          name="proxyEnvs"
+          checked="{proxyEnvironment === proxyEnvs[env]}"
+          on:click="setEnv(proxyEnvs[env])"
+        />
+      </li>
+    {/each}
   {/if}
 
 </ul>
@@ -54,6 +64,7 @@
   export default {
     components: {
       Switch: '@mamba/switch',
+      Radio: '@mamba/radio/Radio.html',
     },
     data() {
       const {
@@ -62,8 +73,14 @@
 
       return {
         ...Registry.get().$Http.panel,
+        ...Registry.persistent.get().$Http.panel,
         appKey,
         timeout: 0,
+        proxyEnvs: {
+          Produção: 'poiproxy',
+          Stage: 'poiproxy-stg',
+          Development: 'poiproxy-dev',
+        },
       };
     },
     oncreate() {
@@ -75,11 +92,24 @@
           if (changed.appKey) {
             draft.$App.appKey = current.appKey;
           }
+          if (changed.activeProxy) {
+            draft.$Http.panel.activeProxy = current.activeProxy;
+          }
+          if (changed.proxyEnvironment) {
+            draft.$Http.panel.proxyEnvironment = current.proxyEnvironment;
+          }
         });
         Registry.set(draft => {
           draft.$Http.panel = current;
         });
       }
+    },
+    methods: {
+      setEnv(env) {
+        Registry.persistent.set(draft => {
+          draft.$Http.panel.proxyEnvironment = env;
+        });
+      },
     },
   };
 </script>
