feat: 🎸 implement orgs panel with pos supports

--- a/packages/pos/simulator/view/pos/hardware/Screen.html
+++ b/packages/pos/simulator/view/pos/hardware/Screen.html
@@ -155,12 +155,11 @@
     }
 
     :global(.Q92 .screen) {
-      top: 162px;
-      left: 64px;
-      border-radius: 0;
-      width: 280px;
-      height: 410px;
-      outline: 1px solid black;
+      top: 161px;
+      left: 63px;
+      border-radius: 2px;
+      width: 282px;
+      height: 411px;
     }
 
     .content {
