--- a/packages/pos/simulator/view/pos/ControlPanel.html
+++ b/packages/pos/simulator/view/pos/ControlPanel.html
@@ -17,7 +17,8 @@
   import FlowsPanel from './panels/Flows.html';
   import HttpPanel from './panels/Http.html';
   import Merchant from './panels/Merchant.html';
-  import Models from './panels/Models.html';
+  import POS from './panels/POS.html';
+  import Orgs from './panels/Orgs.html';
 
   let lastKeypressTime = 0;
 
@@ -27,7 +28,7 @@
     },
     data() {
       return {
-        panels: [Models, GeneralPanel, Merchant, FlowsPanel, HttpPanel],
+        panels: [POS, Orgs, GeneralPanel, Merchant, FlowsPanel, HttpPanel],
       };
     },
     oncreate() {
