style: 💄 enlarge small screen fonts

--- a/packages/components/Button/Button.html
+++ b/packages/components/Button/Button.html
@@ -122,4 +122,14 @@
       left: 0;
     }
   }
+
+  :global(.has-small-screen) {
+    button {
+      &.size-normal,
+ &.size-fill,
+ &.size-full {
+        font-size: 20px;
+      }
+    }
+  }
 </style>
