style: 💄 update icons on buttons

--- a/packages/components/Range/Range.html
+++ b/packages/components/Range/Range.html
@@ -9,7 +9,9 @@
   <table>
     <tr>
       <td class="button-col">
-        <button style={buttonStyle} on:click="decrement()">-</button>
+        <button style={buttonStyle} on:click="decrement()">
+          <Icon symbol="chevron-down" color="#fff" size="small" />
+        </button>
       </td>
       <td>
         <div class="track" style="background-color: {barColor};">
@@ -17,7 +19,9 @@
         </div>
       </td>
       <td class="button-col">
-        <button style={buttonStyle} on:click="increment()">+</button>
+        <button style={buttonStyle} on:click="increment()">
+          <Icon symbol="chevron-up" color="#fff" size="small" />
+        </button>
       </td>
     </tr>
   </table>
@@ -27,6 +31,9 @@
   import { green500, neutral700 } from '@mamba/styles/colors';
 
   export default {
+    components: {
+      Icon: '@mamba/icon',
+    },
     data() {
       return {
         icon: null,
@@ -143,6 +150,7 @@
     width: 31px;
     height: 31px;
     line-height: 1;
+    padding: 0;
   }
 
   .button-col {
