style: 💄 alteraçao de fonte para mp35 e mp35p
BREAKING CHANGE: 🧨 n

--- a/packages/components/Input/Input.html
+++ b/packages/components/Input/Input.html
@@ -371,6 +371,13 @@ import defaultTokens from './libs/tokens.js';
 </script>
 
 <style type="text/postcss">
+  :global(.MP35P),
+  :global(.MP35) {
+    input[type='text'] {
+      font-size: 22px;
+    }
+  }
+
   .input {
     position: relative;
     display: block;
