style: 💄 tamanho da fonte

--- a/packages/components/Switch/Switch.html
+++ b/packages/components/Switch/Switch.html
@@ -31,6 +31,14 @@
 </script>
 
 <style type="text/postcss">
+  :global(.MP35P),
+  :global(.MP35) {
+    .switch {
+      width: 35px;
+      height: 13px;
+    }
+  }
+
   input {
     display: none;
   }
