style: 💄 alteraçao no tamanho das fontes para mp35 e mp35p

--- a/packages/components/AppBar/AppBar.html
+++ b/packages/components/AppBar/AppBar.html
@@ -152,6 +152,13 @@
 <style type="text/postcss">
   @import '@mamba/styles/settings.pcss';
 
+  :global(.MP35P),
+  :global(.MP35) {
+    .title {
+      font-size: 18px;
+    }
+  }
+
   $item-horizontal-margin: 8px;
 
   .appbar {
